syntax = "proto3";
package com.odc.paymentservice.v1;

option java_multiple_files = true;
option java_package = "com.odc.paymentservice.v1";
option java_outer_classname = "PaymentServiceProto";

message DisbursementCompletedEvent {
  string disbursement_id = 1;
  string project_id = 2;
  string milestone_id = 3;

  string status = 4;

  string total_amount = 5;
  string system_fee = 6;
  string mentor_amount = 7;
  string talent_amount = 8;
}